cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj3_TupleStruct_1.plcfunc
FUNCTION proj3_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj3_TupleStruct_1 := tuple.field3;
END_FUNCTION
